--- a/HabitTracker/app/src/main/res/layout/itemaddhabit.xml
+++ b/HabitTracker/app/src/main/res/layout/itemaddhabit.xml
@@ -12,7 +12,7 @@
         android:layout_height="80dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
-        android:src="@drawable/star_icon"
+        android:src="@drawable/profilepic"
         app:civ_border_width="2dp"
         app:civ_border_color="#FFFFFFFF"
         app:layout_constraintCircleRadius="60dp"
@@ -23,10 +23,14 @@
         android:id="@+id/textViewBelowImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
         android:layout_below="@id/circularImageView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="10dp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:text="Your Text"
         android:textSize="16sp" />
 
