--- a/HabitTracker/app/src/main/res/layout/activity_habit_goal2.xml
+++ b/HabitTracker/app/src/main/res/layout/activity_habit_goal2.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/app_bar"
+            android:id="@+id/toolbar"
             style="@style/Widget.Shrine.Toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -32,8 +32,8 @@
                 android:id="@+id/textViewNext"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Next"
-                android:textColor="?attr/colorPrimary"
+                android:text="Save"
+                android:textColor="@color/whiteTextColor"
                 android:textSize="18sp"
                 android:layout_gravity="end"
                 android:layout_marginEnd="16dp"/>
