--- a/HabitTracker/app/src/main/res/layout/activity_habitgoal.xml
+++ b/HabitTracker/app/src/main/res/layout/activity_habitgoal.xml
@@ -33,8 +33,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Next"
-                android:textColor="?attr/colorPrimary"
-                android:textSize="18sp"
+                android:textColor="@color/whiteTextColor"
+                android:textSize="20sp"
                 android:layout_gravity="end"
                 android:layout_marginEnd="16dp"/>
         </androidx.appcompat.widget.Toolbar>
