--- a/HabitTracker/app/src/main/res/layout/add_story_item.xml
+++ b/HabitTracker/app/src/main/res/layout/add_story_item.xml
@@ -5,42 +5,49 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-
-
     android:background="@android:color/white">
 
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/whiteTextColor">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/storyphoto"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_marginTop="16dp"
-            android:src="@drawable/profilepic"
-            app:civ_border_width="2dp"
+            android:layout_centerInParent="true"
             android:layout_marginEnd="20dp"
             android:background="@drawable/shape_for_circularimage"
-            app:layout_constraintCircleRadius="60dp"
-            app:layout_constraintCircleAngle="0"/>
+            android:src="@drawable/profilepic"
+
+            app:layout_constraintCircleAngle="0"
+            app:layout_constraintCircleRadius="60dp" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/addimage"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_below="@id/storyphoto"
-            android:layout_marginTop="-18dp"
+            android:layout_marginTop="-21dp"
+            android:background="@color/colorAccent"
             android:src="@drawable/baseline_add_24"
             app:civ_border_width="2dp" />
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/textViewBelowImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/storyphoto"
-        android:layout_marginTop="20dp"
-        android:layout_alignParentBottom="true"
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/textViewBelowImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/storyphoto"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="16dp"
+            android:gravity="center"
+            android:singleLine="true"
+            android:text="Your story"
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
+    </RelativeLayout>
 
-        android:text="Your Story"
-        android:textColor="@android:color/black"
-        android:textSize="16sp" />
 
 </LinearLayout>
