--- a/HabitTracker/app/src/main/res/layout/dialogfornotes.xml
+++ b/HabitTracker/app/src/main/res/layout/dialogfornotes.xml
@@ -5,28 +5,26 @@
     android:background="@color/whiteTextColor"
     android:padding="16dp">
 
-
-
     <include layout="@layout/titlelayoutfordialog"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@color/whiteTextColor"
-        android:padding="16dp">
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/edtfordialognotes"
+    <View
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="20dp"
-        android:hint="@string/enternotes"
-        android:gravity="top|start"
-        android:textColorHint="@android:color/darker_gray"
-        android:background="@color/halfwhite" />
-</LinearLayout>
+        android:layout_height="1dp"
+        android:background="@color/colorAccent" />
 
+
+
+        <EditText
+            android:id="@+id/edtfordialognotes"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="@string/enternotes"
+            android:gravity="top|start"
+            android:padding="20dp"
+            android:layout_marginTop="20dp"
+            android:textColorHint="@android:color/darker_gray"
+            android:background="@color/halfwhite" />
 
 
 </LinearLayout>
