--- a/HabitTracker/app/src/main/res/layout/dialoglayoutforrewards.xml
+++ b/HabitTracker/app/src/main/res/layout/dialoglayoutforrewards.xml
@@ -7,6 +7,10 @@
 
     <!-- Include the custom title layout -->
     <include layout="@layout/titlelayoutfordialog"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorAccent" />
 
 
     <LinearLayout
@@ -14,6 +18,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="3"
+        android:layout_marginTop="20dp"
         android:layout_gravity="center_vertical"
         android:padding="16dp">
 
@@ -33,7 +38,6 @@
             android:layout_weight="1.3"
             android:hint="@string/count"
             android:textColorHint="@android:color/darker_gray"
-
             android:background="@android:drawable/editbox_background"/>
     </LinearLayout>
 
