--- a/HabitTracker/app/src/main/res/layout/habit_list_item.xml
+++ b/HabitTracker/app/src/main/res/layout/habit_list_item.xml
@@ -14,11 +14,11 @@
         android:orientation="vertical"
         android:visibility="gone">
 
-        <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="1dp"-->
-        <!--android:layout_centerVertical="true"-->
-        <!--android:background="@color/colorPrimary" />-->
+<!--        <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="1dp"-->
+<!--        android:layout_centerVertical="true"-->
+<!--        android:background="@color/colorPrimary" />-->
 
         <TextView
             android:id="@+id/date_text"
@@ -65,8 +65,7 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:layout_weight="0.5"
-                android:gravity="center_vertical"
-            >
+                android:gravity="center_vertical">
 
                 <ImageView
                     android:id="@+id/delete_icon"
