--- a/HabitTracker/app/src/main/res/layout/item_story.xml
+++ b/HabitTracker/app/src/main/res/layout/item_story.xml
@@ -5,8 +5,6 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-
-
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,11 +14,11 @@
             android:id="@+id/circularImageViewfornewfeed"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_marginTop="16dp"
+            android:layout_centerInParent="true"
             android:src="@drawable/profilepic"
-            app:civ_border_width="2dp"
-           android:layout_marginEnd="20dp"
-           android:background="@drawable/shape_for_circularimage"
+
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/shape_for_circularimage"
             app:layout_constraintCircleRadius="60dp"
             app:layout_constraintCircleAngle="0" />
 
@@ -30,7 +28,7 @@
             android:layout_height="50dp"
             android:visibility="gone"
             android:layout_marginTop="16dp"
-            android:src="@drawable/star_icon"
+            android:src="@drawable/profilepic"
             app:civ_border_width="2dp"
             app:civ_border_color="#FFFFFFFF"
             app:layout_constraintCircleRadius="60dp"
@@ -41,7 +39,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/circularImageViewfornewfeed"
-            android:layout_marginTop="20dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="16dp"
             android:text="Your Text"
             android:gravity="center"
             android:singleLine="true"
