--- a/HabitTracker/app/src/main/res/layout/titlelayoutfordialog.xml
+++ b/HabitTracker/app/src/main/res/layout/titlelayoutfordialog.xml
@@ -10,7 +10,8 @@
         android:id="@+id/imageViewClose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/star_icon"
+        android:src="@drawable/shr_close_menu"
+        android:layout_margin="20dp"
         android:contentDescription="Close Dialog"/>
 
     <TextView
@@ -29,6 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Save"
+        android:layout_marginTop="20dp"
         android:textSize="18sp"
         android:layout_margin="10dp"
         android:textColor="@android:color/black"
